--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@wordpress/scripts": "30.0.2"
+    "@wordpress/scripts": "30.0.2",
+    "sass": "^1.79.3",
+    "sass-loader": "^16.0.2"
   }
 }
